# cygsystem-config-llvm

./: Makefile.am  README  aclocal.m4  autogen.sh  configure.in  system-config-lvm.desktop  system-config-lvm.desktop.in  system-config-lvm.spec  system-config-lvm.spec.in
po/: POTFILES.in  ar.po  as.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  gu.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  kn.po  ko.po  mk.po  ml.po  mr.po  ms.po  my.po  nb.po  nl.po  or.po  pa.po  pl.po  pt.po  (+15 more)
src/: BlockDevice.py  BlockDeviceModel.py  Cluster.py  CommandHandler.py  ExtentSegment.py  FDiskModel.py  Filesystem.glade  Filesystem.py  Fstab.py  InputController.py  LogicalVolume.py  Makefile.am  Multipath.py  Partition.py  PhysicalExtent.py  PhysicalVolume.py  Properties_Renderer.py  Segment.py  ViewableExtent.py  ViewableVolume.py  Volume.py  VolumeGroup.py  Volume_Tab_View.py  WaitMsg.py  cylinder_items.py  execute.py  fdisk_wrapper.py  iscsi.glade  iscsi.py  lv_edit_props.glade  lvm_model.py  lvmui_constants.py  lvui.glade  migrate_extents.glade  parted_wrapper.py  renderer.py  system-config-lvm.py
